--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-fastify": "^6.0.4",
+    "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.0.0",
     "bcrypt": "^3.0.5",
+    "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "crypto-random-string": "^2.0.0",
+    "fastify-swagger": "^2.3.2",
     "nps": "^5.9.5",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
