--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && npm run build",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/src/main.js",
     "setup:db": "nps",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
