--- a/package.json
+++ b/package.json
@@ -21,51 +21,51 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.0.4",
-    "@nestjs/core": "^6.0.4",
-    "@nestjs/jwt": "^6.0.0",
-    "@nestjs/passport": "^6.0.0",
-    "@nestjs/platform-fastify": "^6.0.4",
-    "@nestjs/swagger": "^3.0.2",
-    "@nestjs/typeorm": "^6.0.0",
-    "bcrypt": "^3.0.5",
-    "class-transformer": "^0.2.0",
-    "class-validator": "^0.9.1",
-    "crypto-random-string": "^2.0.0",
-    "fastify-swagger": "^2.3.2",
-    "nps": "^5.9.5",
-    "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^4.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.2.2",
-    "sqlite": "^3.0.3",
-    "typeorm": "^0.2.16",
-    "typescript": "^3.4.1"
+    "@nestjs/common": "6.3.1",
+    "@nestjs/core": "6.3.1",
+    "@nestjs/jwt": "6.1.1",
+    "@nestjs/passport": "6.1.0",
+    "@nestjs/platform-fastify": "^6.3.1",
+    "@nestjs/swagger": "3.0.2",
+    "@nestjs/typeorm": "6.1.2",
+    "bcrypt": "3.0.6",
+    "class-transformer": "0.2.3",
+    "class-validator": "0.9.1",
+    "crypto-random-string": "3.0.1",
+    "fastify-swagger": "2.4.0",
+    "nps": "5.9.5",
+    "passport": "0.4.0",
+    "passport-http-bearer": "1.0.1",
+    "passport-jwt": "4.0.0",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "2.6.3",
+    "rxjs": "6.5.2",
+    "sqlite": "3.0.3",
+    "typeorm": "0.2.18",
+    "typescript": "3.5.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.7.1",
-    "@types/supertest": "^2.0.5",
-    "chalk": "^2.4.2",
-    "commander": "^2.19.0",
-    "faker": "^4.1.0",
-    "glob": "^7.1.3",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
-    "nps-utils": "^1.7.0",
-    "prettier": "^1.14.2",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^8.0.3",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "tsconfig-paths": "^3.5.0",
-    "tslint": "5.11.0"
+    "@nestjs/testing": "6.3.1",
+    "@types/bcrypt": "3.0.0",
+    "@types/express": "4.17.0",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.0.10",
+    "@types/supertest": "2.0.7",
+    "chalk": "2.4.2",
+    "commander": "2.20.0",
+    "faker": "4.1.0",
+    "glob": "7.1.4",
+    "jest": "24.8.0",
+    "nodemon": "1.19.1",
+    "nps-utils": "1.7.0",
+    "prettier": "1.18.2",
+    "supertest": "4.0.2",
+    "ts-jest": "24.0.2",
+    "ts-loader": "6.0.4",
+    "ts-node": "8.3.0",
+    "ts-node-dev": "1.0.0-pre.40",
+    "tsconfig-paths": "3.8.0",
+    "tslint": "5.18.0"
   },
   "jest": {
     "moduleFileExtensions": [
